--- a/backend/static/index.html
+++ b/backend/static/index.html
@@ -7,7 +7,7 @@
 <html>
 
 <head>
-	<title>Landed by HTML5 UP</title>
+	<title>IAsesoria Informática - Tu partner en soluciones digitales</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<link rel="stylesheet" href="assets/css/main.css" />
@@ -21,12 +21,12 @@
 
 		<!-- Header -->
 		<header id="header">
-			<h1 id="logo"><a href="index.html">Landed</a></h1>
+			<h1 id="logo"><a href="index.html">IAsesoria</a></h1>
 			<nav id="nav">
 				<ul>
 					<li><a href="index.html">Home</a></li>
 					<li>
-						<a href="#">Layouts</a>
+						<a href="#">Niveles</a>
 						<ul>
 							<li><a href="left-sidebar.html">Left Sidebar</a></li>
 							<li><a href="right-sidebar.html">Right Sidebar</a></li>
