--- a/backend/static/index.html
+++ b/backend/static/index.html
@@ -13,7 +13,7 @@
         <header id="header">
             <h1 id="logo">
                 <a href="index.html">
-                    <img src="images/logo.png" alt="" style="height: 40px; vertical-align: middle; margin-right: 10px;"> 
+                    <img src="images/logoprincipal.jpeg" alt="" style="height: 40px; vertical-align: middle; margin-right: 10px;"> 
                     IAsesoria
                 </a>
             </h1>
@@ -33,7 +33,7 @@
                     <p>Automatización inteligente y soluciones digitales<br />
                     diseñadas para escalar tus procesos.</p>
                 </header>
-                <span class="image"><img src="images/logo.png" alt="Logo IAsesoria" /></span>
+                <span class="image"><img src="images/logoprincipal.jpeg" alt="Logo IAsesoria" /></span>
             </div>
             <a href="#one" class="goto-next scrolly">Next</a>
         </section>
