Actualizacion de enlaces para rrss

--- a/backend/static/index.html
+++ b/backend/static/index.html
@@ -49,7 +49,7 @@
                         <section class="col-4 col-6-medium col-12-xsmall">
                             <span class="icon solid alt major fa-robot"></span>
                             <h3>Secretarios IA</h3>
-                            <p>Procesamiento de solicitudes y resúmenes automáticos como el que acabas de probar.</p>
+                            <p>Procesamiento de solicitudes y resúmenes automáticos con una IA amigable y siempre dispuesta a ayudar.</p>
                         </section>
                         <section class="col-4 col-6-medium col-12-xsmall">
                             <span class="icon solid alt major fa-chart-line"></span>
@@ -97,11 +97,11 @@
         </section>
 
         <footer id="footer">
-            <ul class="icons">
-                <li><a href="#" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-                <li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
-                <li><a href="#" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
-            </ul>
+<ul class="icons">
+        <li><a href="https://www.linkedin.com/in/benjamin-carmona-69aa44223" class="icon brands alt fa-linkedin-in" target="_blank"><span class="label">LinkedIn</span></a></li>
+        <li><a href="https://github.com/Benj11ii" class="icon brands alt fa-github" target="_blank"><span class="label">GitHub</span></a></li>
+        <li><a href="mailto:iasesoriainformatica@gmail.com" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
+    </ul>
             <ul class="copyright">
                 <li>&copy; IAsesoria Informática. Todos los derechos reservados.</li>
                 <li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
