Ajustes visuales para logo principal.

--- a/backend/static/index.html
+++ b/backend/static/index.html
@@ -1,123 +1,136 @@
 <!DOCTYPE HTML>
 <html>
+
 <head>
-    <title>IAsesoria - Inteligencia Artificial Aplicada</title>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-    <link rel="stylesheet" href="assets/css/main.css" />
-    <noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+	<title>IAsesoria - Inteligencia Artificial Aplicada</title>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+	<link rel="stylesheet" href="assets/css/main.css" />
+	<noscript>
+		<link rel="stylesheet" href="assets/css/noscript.css" />
+	</noscript>
 </head>
+
 <body class="is-preload landing">
-    <div id="page-wrapper">
+	<div id="page-wrapper">
 
-        <header id="header">
-            <h1 id="logo">
-                <a href="index.html">
-                    <img src="images/logoprincipal.jpeg" alt="" style="height: 40px; vertical-align: middle; margin-right: 10px;"> 
-                    IAsesoria
-                </a>
-            </h1>
-            <nav id="nav">
-                <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="#one" class="scrolly">Galería</a></li>
-                    <li><a href="#five" class="button primary scrolly">Contacto</a></li>
-                </ul>
-            </nav>
-        </header>
+		<header id="header">
+			<h1 id="logo">
+				<a href="index.html">
+					<img src="images/logoprincipal.jpeg" alt=""
+						style="height: 40px; vertical-align: middle; margin-right: 10px;">
+					IAsesoria
+				</a>
+			</h1>
+			<nav id="nav">
+				<ul>
+					<li><a href="index.html">Home</a></li>
+					<li><a href="#one" class="scrolly">Galería</a></li>
+					<li><a href="#five" class="button primary scrolly">Contacto</a></li>
+				</ul>
+			</nav>
+		</header>
 
-        <section id="banner">
-            <div class="content">
-                <header>
-                    <h2>Potencia tu negocio con IA</h2>
-                    <p>Automatización inteligente y soluciones digitales<br />
-                    diseñadas para escalar tus procesos.</p>
-                </header>
-                <span class="image"><img src="images/logoprincipal.jpeg" alt="Logo IAsesoria" /></span>
-            </div>
-            <a href="#one" class="goto-next scrolly">Next</a>
-        </section>
+		<section id="banner">
+			<div class="content">
+				<header>
+					<h2>Potencia tu negocio con IA</h2>
+					<p>Automatización inteligente y soluciones digitales<br />
+						diseñadas para escalar tus procesos.</p>
+				</header>
+				<span class="image"><img src="images/logoprincipal.jpeg" alt="Logo IAsesoria" /></span>
+			</div>
+			<a href="#one" class="goto-next scrolly">Next</a>
+		</section>
 
-        <section id="one" class="wrapper style1 special fade-up">
-            <div class="container">
-                <header class="major">
-                    <h2>Nuestras Soluciones</h2>
-                    <p>Explora lo que la IA puede hacer por tu flujo de trabajo diario.</p>
-                </header>
-                <div class="box alt">
-                    <div class="row gtr-uniform">
-                        <section class="col-4 col-6-medium col-12-xsmall">
-                            <span class="icon solid alt major fa-robot"></span>
-                            <h3>Secretarios IA</h3>
-                            <p>Procesamiento de solicitudes y resúmenes automáticos con una IA amigable y siempre dispuesta a ayudar.</p>
-                        </section>
-                        <section class="col-4 col-6-medium col-12-xsmall">
-                            <span class="icon solid alt major fa-chart-line"></span>
-                            <h3>Análisis de Datos</h3>
-                            <p>Transformamos grandes volúmenes de texto en insights accionables para tu empresa.</p>
-                        </section>
-                        <section class="col-4 col-6-medium col-12-xsmall">
-                            <span class="icon solid alt major fa-envelope-open-text"></span>
-                            <h3>Automatización</h3>
-                            <p>Integración de formularios con Telegram, Google Sheets y CRM de forma transparente.</p>
-                        </section>
-                    </div>
-                </div>
-            </div>
-        </section>
+		<section id="one" class="wrapper style1 special fade-up">
+			<div class="container">
+				<header class="major">
+					<h2>Nuestras Soluciones</h2>
+					<p>Explora lo que la IA puede hacer por tu flujo de trabajo diario.</p>
+				</header>
+				<div class="box alt">
+					<div class="row gtr-uniform">
+						<section class="col-4 col-6-medium col-12-xsmall">
+							<span class="icon solid alt major fa-robot"></span>
+							<h3>Secretarios IA</h3>
+							<p>Procesamiento de solicitudes y resúmenes automáticos con una IA amigable y siempre
+								dispuesta a ayudar.</p>
+						</section>
+						<section class="col-4 col-6-medium col-12-xsmall">
+							<span class="icon solid alt major fa-chart-line"></span>
+							<h3>Análisis de Datos</h3>
+							<p>Transformamos grandes volúmenes de texto en insights accionables para tu empresa.</p>
+						</section>
+						<section class="col-4 col-6-medium col-12-xsmall">
+							<span class="icon solid alt major fa-envelope-open-text"></span>
+							<h3>Automatización</h3>
+							<p>Integración de formularios con Telegram, Google Sheets y CRM de forma transparente.</p>
+						</section>
+					</div>
+				</div>
+			</div>
+		</section>
 
-        <section id="five" class="wrapper style2 special fade">
-            <div class="container">
-                <header>
-                    <h2>Inicia tu transformación</h2>
-                    <p>Cuéntanos tu necesidad y deja que nuestra IA te proponga una solución.</p>
-                </header>
-                <form method="POST" action="/secretario/guardar" class="cta">
-                    <div class="row gtr-50 gtr-uniform">
-                        <div class="col-6 col-12-xsmall">
-                            <input type="text" name="nombre" placeholder="Nombre" required />
-                        </div>
-                        <div class="col-6 col-12-xsmall">
-                            <input type="email" name="correo" placeholder="Email" required />
-                        </div>
-                        <div class="col-12">
-                            <input type="text" name="telefono" placeholder="Teléfono" required />
-                        </div>
-                        <div class="col-12">
-                            <textarea name="texto_original" placeholder="Describe brevemente qué proceso te gustaría automatizar..." rows="4" required></textarea>
-                        </div>
-                        <div class="col-12">
-                            <ul class="actions special">
-                                <li><input type="submit" value="Enviar Solicitud" class="primary" /></li>
-                            </ul>
-                        </div>
-                    </div>
-                </form>
-            </div>
-        </section>
+		<section id="five" class="wrapper style2 special fade">
+			<div class="container">
+				<header>
+					<h2>Inicia tu transformación</h2>
+					<p>Cuéntanos tu necesidad y deja que nuestra IA te proponga una solución.</p>
+				</header>
+				<form method="POST" action="/secretario/guardar" class="cta">
+					<div class="row gtr-50 gtr-uniform">
+						<div class="col-6 col-12-xsmall">
+							<input type="text" name="nombre" placeholder="Nombre" required />
+						</div>
+						<div class="col-6 col-12-xsmall">
+							<input type="email" name="correo" placeholder="Email" required />
+						</div>
+						<div class="col-12">
+							<input type="text" name="telefono" placeholder="Teléfono" required />
+						</div>
+						<div class="col-12">
+							<textarea name="texto_original"
+								placeholder="Describe brevemente qué proceso te gustaría automatizar..." rows="4"
+								required></textarea>
+						</div>
+						<div class="col-12">
+							<ul class="actions special">
+								<li><input type="submit" value="Enviar Solicitud" class="primary" /></li>
+							</ul>
+						</div>
+					</div>
+				</form>
+			</div>
+		</section>
 
-        <footer id="footer">
-<ul class="icons">
-        <li><a href="https://www.linkedin.com/in/benjamin-carmona-69aa44223" class="icon brands alt fa-linkedin-in" target="_blank"><span class="label">LinkedIn</span></a></li>
-        <li><a href="https://github.com/Benj11ii" class="icon brands alt fa-github" target="_blank"><span class="label">GitHub</span></a></li>
-        <li><a href="mailto:iasesoriainformatica@gmail.com" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
-    </ul>
-            <ul class="copyright">
-                <li>&copy; IAsesoria Informática. Todos los derechos reservados.</li>
-                <li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-            </ul>
-        </footer>
+		<footer id="footer">
+			<ul class="icons">
+				<li><a href="https://www.linkedin.com/in/benjamin-carmona-69aa44223"
+						class="icon brands alt fa-linkedin-in" target="_blank"><span class="label">LinkedIn</span></a>
+				</li>
+				<li><a href="https://github.com/Benj11ii" class="icon brands alt fa-github" target="_blank"><span
+							class="label">GitHub</span></a></li>
+				<li><a href="mailto:iasesoriainformatica@gmail.com" class="icon solid alt fa-envelope"><span
+							class="label">Email</span></a></li>
+			</ul>
+			<ul class="copyright">
+				<li>&copy; IAsesoria Informática. Todos los derechos reservados.</li>
+				<li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+			</ul>
+		</footer>
 
-    </div>
+	</div>
 
-    <script src="assets/js/jquery.min.js"></script>
-    <script src="assets/js/jquery.scrolly.min.js"></script>
-    <script src="assets/js/jquery.dropotron.min.js"></script>
-    <script src="assets/js/jquery.scrollex.min.js"></script>
-    <script src="assets/js/browser.min.js"></script>
-    <script src="assets/js/breakpoints.min.js"></script>
-    <script src="assets/js/util.js"></script>
-    <script src="assets/js/main.js"></script>
+	<script src="assets/js/jquery.min.js"></script>
+	<script src="assets/js/jquery.scrolly.min.js"></script>
+	<script src="assets/js/jquery.dropotron.min.js"></script>
+	<script src="assets/js/jquery.scrollex.min.js"></script>
+	<script src="assets/js/browser.min.js"></script>
+	<script src="assets/js/breakpoints.min.js"></script>
+	<script src="assets/js/util.js"></script>
+	<script src="assets/js/main.js"></script>
 
 </body>
+
 </html>
