--- a/backend/static/index.html
+++ b/backend/static/index.html
@@ -24,7 +24,7 @@
 			</h1>
 			<nav id="nav">
 				<ul>
-					<li><a href="index.html">Home</a></li>
+					<li><a href="index.html">Inicio</a></li>
 					<li><a href="#one" class="scrolly">Galería</a></li>
 					<li><a href="#five" class="button primary scrolly">Contacto</a></li>
 				</ul>
