Ajuste ruta relativa en index.

--- a/backend/static/index.html
+++ b/backend/static/index.html
@@ -78,7 +78,7 @@
 					<h2>Inicia tu transformación</h2>
 					<p>Cuéntanos tu necesidad y deja que nuestra IA te proponga una solución.</p>
 				</header>
-				<form method="POST" action="/secretario/guardar" class="cta">
+				<form method="POST" action="secretario/guardar" class="cta">
 					<div class="row gtr-50 gtr-uniform">
 						<div class="col-6 col-12-xsmall">
 							<input type="text" name="nombre" placeholder="Nombre" required />
