--- a/backend/static/index.html
+++ b/backend/static/index.html
@@ -25,7 +25,7 @@
 			<nav id="nav">
 				<ul>
 					<li><a href="index.html">Inicio</a></li>
-					<li><a href="#one" class="scrolly">Galería</a></li>
+					<li><a href="#one" class="scrolly">Servicios</a></li>
 					<li><a href="#five" class="button primary scrolly">Contacto</a></li>
 				</ul>
 			</nav>
