Ajuste en RRSS whatsapp y corrección de enlaces

--- a/backend/static/index.html
+++ b/backend/static/index.html
@@ -121,6 +121,16 @@
 		</footer>
 
 	</div>
+<!-- Botón WhatsApp flotante - VERSIÓN CORREGIDA -->
+<a href="https://wa.me/56938383838?text=Hola%20Benjamín,%20vi%20tu%20página%20y%20me%20gustaría%20consultar%20sobre..." 
+   class="whatsapp-float" 
+   target="_blank">
+   <div class="outer-circle">
+       <div class="inner-circle">
+           <i class="fab fa-whatsapp"></i>
+       </div>
+   </div>
+</a>
 
 	<script src="assets/js/jquery.min.js"></script>
 	<script src="assets/js/jquery.scrolly.min.js"></script>
@@ -130,7 +140,7 @@
 	<script src="assets/js/breakpoints.min.js"></script>
 	<script src="assets/js/util.js"></script>
 	<script src="assets/js/main.js"></script>
-
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </body>
 
 </html>
